@@ -28,6 +28,9 @@
  ******************************************************************************
  *
  * $Log$
+ * Revision 1.4  2001/03/11 22:31:03  sperkins
+ * Added FITS support for "byte scaled" files.
+ *
  * Revision 1.3  2001/03/09 01:57:48  sperkins
  * Added support for reading and writing metadata to FITS files.
  *
@@ -69,7 +72,8 @@ class FITSDataset : public GDALDataset {
   int fitsDataType;   // FITS code for the image type
   bool isExistingFile;
   long highestOffsetWritten;  // How much of image has been written
-
+  bool isBScaled;         // Is the file format floats stored as bytes
+  float bZero, bScale;   // Parameters for float<->byte conversion
   FITSDataset();     // Others shouldn't call this constructor explicitly
 
   CPLErr Init(fitsfile* hFITS_, bool isExistingFile_);
@@ -360,8 +364,30 @@ CPLErr FITSDataset::Init(fitsfile* hFITS_, bool isExistingFile_) {
 	     GetDescription(), status);
     return CE_Failure;
   }
+
+  // Determine if image is byte scaled
+  fits_read_key_flt(hFITS, "BZERO", &bZero, 0, &status);
+  fits_read_key_flt(hFITS, "BSCALE", &bScale, 0, &status);
+  if (status)
+    // BZERO and BSCALE headers not present - reset status
+    status = 0;
+  else
+    isBScaled = true;
+  
   // Determine data type
-  if (bitpix == BYTE_IMG) {
+  if (isBScaled && bitpix == 8) {  // If we have a b-scaled image
+    if (isExistingFile) {          // treat it as float or double
+      gdalDataType = GDT_Float32;
+      fitsDataType = TFLOAT;
+    }
+    else {       // If the file was created, it could be either double or float
+      if (gdalDataType == GDT_Float64)
+	fitsDataType = TDOUBLE;
+      else
+	fitsDataType = TFLOAT;
+    }
+  }
+  else if (bitpix == BYTE_IMG) {
      gdalDataType = GDT_Byte;
      fitsDataType = TBYTE;
   }
@@ -522,12 +548,32 @@ GDALDataset *FITSDataset::Create(const char* pszFilename,
   FITSDataset* dataset;
   fitsfile* hFITS;
   int status = 0;
-  
-  // Currently we don't have any creation options for FITS
-  // but we should add an option for bscaling float data as bytes.
-  // We also need some way of reading this stuff back again - perhaps
-  // something special in IReadBlock, etc.
-  // TODO: add bscale/bzero stuff
+
+  // Parse options - setting BSCALE and BZERO (both or neither must be set)
+  // causes a float format image to be stored in byte scaled form. As a result
+  // these options only make sense if eType is float or double.
+  bool haveBZero = false, haveBScale = false;
+  float bZero, bScale;
+  if (CSLFetchNameValue(papszParmList,"BZERO") != NULL) {
+    haveBZero = true;
+    bZero = atof(CSLFetchNameValue(papszParmList,"BZERO"));
+  }
+  if (CSLFetchNameValue(papszParmList,"BSCALE") != NULL) {
+    haveBScale = true;
+    bScale = atof(CSLFetchNameValue(papszParmList,"BSCALE"));
+  }
+  if (haveBZero != haveBScale) {
+    CPLError(CE_Failure, CPLE_AppDefined,
+	     "Either neither or both BSCALE and BZERO options must be "
+	     "specified when creating a FITS file");
+    return NULL;
+  }
+  if (haveBScale && !(eType == GDT_Float32 || eType == GDT_Float64)) {
+    CPLError(CE_Warning, CPLE_AppDefined,
+	     "BSCALE and BZERO may only be used with float or double "
+	     "FITS images\nCreation options ignored");
+    haveBZero = haveBScale = false;
+  }
 
   // Create the file - to force creation, we prepend the name with '!'
   char* extFilename = new char[strlen(pszFilename) + 10];  // 10 for margin!
@@ -555,6 +601,7 @@ GDALDataset *FITSDataset::Create(const char* pszFilename,
   else {
     CPLError(CE_Failure, CPLE_AppDefined,
 	     "GDALDataType (%d) unsupported for FITS", eType);
+    fits_close_file(hFITS, &status);
     return NULL;
   }
 
@@ -566,11 +613,31 @@ GDALDataset *FITSDataset::Create(const char* pszFilename,
     CPLError(CE_Failure, CPLE_AppDefined,
 	     "Couldn't create image within FITS file %s (%d).", 
 	     pszFilename, status);
+    fits_close_file(hFITS, &status);
     return NULL;
   }
 
+  // If bscaling is requested, add appropriate BSCALE and BZERO headers
+  // We also need to set BITPIX to 8
+  if (haveBScale) {
+    bitpix = 8;
+    fits_movabs_hdu(hFITS, 1, 0, &status);
+    fits_update_key(hFITS, TINT, "BITPIX", &bitpix, 0, &status);
+    fits_update_key(hFITS, TFLOAT, "BSCALE", &bScale, 0, &status);
+    fits_update_key(hFITS, TFLOAT, "BZERO", &bZero, 0, &status);
+    if (status) {
+      CPLError(CE_Failure, CPLE_AppDefined,
+	       "Couldn't set BSCALE/BZERO headers in FITS file %s (%d)",
+	       pszFilename, status);
+      fits_close_file(hFITS, &status);
+      return NULL;
+    }
+  }
+  
   dataset = new FITSDataset();
   dataset->SetDescription(pszFilename);
+  dataset->gdalDataType = eType;  // For b-scale we need to know intended type
+
   // Init recalculates a lot of stuff we already know, but...
   if (dataset->Init(hFITS, false) != CE_None) { 
     delete dataset;
